--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "webpack serve --config ./webpack/config.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./webpack/config.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --config ./webpack/config.prod.js",
+    "build:minify": "cross-env-shell MINIFY=1 yarn build"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
     "@babel/preset-env": "^7.12.17",
+    "@nurminen/html-beautify-webpack-plugin": "^1.1.3",
     "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
@@ -32,6 +34,7 @@
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
+    "underscore-template-loader": "^1.1.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.23.0",
     "webpack-cli": "^4.5.0",
@@ -39,6 +42,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-beta2"
+    "bootstrap": "^5.0.0-beta2",
+    "lodash": "^4.17.21"
   }
 }
