--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta2",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "swiper": "^6.4.15"
   }
 }
