--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.0.0-beta2",
+    "dompurify": "^2.2.6",
     "lodash": "^4.17.21",
+    "progressbar.js": "^1.1.0",
     "swiper": "^6.4.15"
   }
 }
