--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack serve --config ./webpack/config.dev.js",
+    "serve": "nodemon --watch webpack --exec 'webpack serve --config ./webpack/config.dev.js'",
     "build": "cross-env NODE_ENV=production webpack --config ./webpack/config.prod.js",
     "build:minify": "cross-env-shell MINIFY=1 yarn build"
   },
@@ -28,6 +28,7 @@
     "html-loader": "^2.1.0",
     "html-webpack-plugin": "^5.2.0",
     "mini-css-extract-plugin": "^1.3.8",
+    "nodemon": "^2.0.7",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.2.6",
     "postcss-loader": "^5.0.0",
